<resources>
    <string name="app_name">ProtoTypeChoiceAdventure</string>
    <string name="bt_newGame">New Game</string>
    <string name="bt_loadGame">Load Game</string>
    <string name="bt_loadCheckPoint">Load\nCheckPoint</string>
    <string name="bt_exit">Exit</string>
    <!-- HanaFragment-->
    <string name="firstText">대체 어쩌다가 이렇게 되버린걸까..
        \n좀비 바이러스가 창궐한지 6개월이 지났다.
        \n감기 걸렸다며 내 자취방에서 쉬었다가 가면 안되냐던
        \n내 친구는 내 침실에 갇혀서
        \n3개월째 동거동락 중이다.
        \n빌어먹게도,
        \n좀비는 항상 목에서 끓어오르는 소리를 낸다.
        \n그리고 그 소리 때문에 나는 잠을 잘수가 없을 지경이다.
        \n익숙해 지겠지.. 하면서 버텨왔지만,
        \n더 이상 버틸 수가 없다.
        \n잠을 잘 수가 없어서 돌아버리겠거든.
        \n나는 어떻게 해야 할까.
        \n나의 가장 친한 친구 진석이를,
        \n하지만 좀비가 되어버린 친구를,
        \n내 손으로 죽여야만 하는 걸까?
        \n이건 친구를 편하게 해주는 것일 수도 있다.
        \n아니면 나중에라도 백신이 개발 되어서
        \n친구가 살아 날 수도 있을 것이다.
        \n물론.. 아주 낮은 확률 이겠지만 말이다.
        \n나는 어떻게 해야 할까? 친구를..
        \n편햐게 해줄까??</string>

    <string name="firstButton1">죽인다.</string>
    <string name="firstButton2">죽이지 않는다.</string>

    <!-- DulFragment-->
    <string name="dulText">살인자가 느끼는 감정을 알고 있는가?
        \n이제 나는 안다.
        \n미칠 것 같다.
        \n나는 문을 열고,가지고 있던 야구배트로
        \n진석이의 머리를 후려 쳤다.
        \n그 느낌이, 그 물컹했던 느낌이 잊혀지지 않는다.
        \n최악이다.
        \n제 정신으로는 버틸 수가 없다.
        \n아무리 나를 정당화 해려 해봐도 정당화 되지 않는다.
        \n나는 친구를 죽였다.
        \n만약 사회가 재건되면,
        \n나는 살인죄로 처벌 받게 될까?
        \n죄책감에 빠지면 안된다.
        \n살아남으려면 그래야만 한다.
        \n잠을 더 잘 잘 수 있을줄 알았는데,
        \n뜬 눈으로 밤을 지새웠다.
        \n너무 피곤하다. 하지만 잠이 오지 않는다.
        \n아무래도, 술이 필요하다.
        \n나에겐 술이 절실하다.
        \n술이 필요해. 술이 절실해.
        \n아파트 단지주변에 슈퍼가 있다.
        \n좀비들이 돌아다니지만, 지금은 술이 더 중요해.
        \n이 빌어먹을 기분을 끝내고 싶다.
        </string>

    <string name="dulButton1">술을 구하러 간다.</string>
    <string name="dulButton2">다시 자려고 노력한다.</string>

    <!-- Dul2Fragment-->
    <string name="dulText2">진석이 때문에 잠이 오지 않아서 미쳐버리겠다.
    \n죽이지 않은 것이 나를 위해서 좋은 선택일까?
    \n하긴, 죽였다면 죄책감에 몸부림 쳤을거다.
    \n물론 계속 잠을 설치겠지만..
    \n슬슬 식량이 떨어져 간다.
    \n집에 있던 참치와 라면으로 6개월을 버텼다.
    \n아껴 먹느라 살이 10kg는 넘게 빠졌을 것이다.
    \n하지만 이젠 라면도 참치도 없다.
    \n먹을 것이 필요하다.
    \n아파트 건너 200M정도 가야 나오는 마트,
    \n그리고 아파트 앞에 편의점이 하나 있다.
    \n아무래도 마트가 좀 더 챙길것이 많겠지.
    \n어떻게 해야 할까?</string>

    <string name="dulButton3">마트로 간다.</string>
    <string name="dulButton4">편의점으로 간다.</string>

    <!--SamFragment -->
    <!--Previous DulFragment  -->
    <string name="samText">정신이 없다.
    \n잠을 자지 못한 피곤함과,
    \n죄책감이 나를 옭아맨다.
    \n이럴 거였다면 차라리 죽이지 않아써야 했나.
    \n하지만 어쩔 수 없었어. 어쩔 수 없었다고!
    \n혼자 생각에 빠진채 돌아다니다가
    \n좀비와 마주쳤다.
    \n어떡하지?? 어떡하지??</string>
    <string name="samButton1">도망간다.</string>
    <string name="samButton2">좀비를 따돌리고\n편의점으로 간다.</string>

    <!--Sam2Fragment -->
    <!--Previous DulFragment  -->
    <string name="samText2">잠이 오지 않는다.
    \n억지로라도 잠을 청하려 노력하고 있다.
    \n지난 6개월간 얼마나 개고생을 했는데!
    \n너 때문에, 진석이 너 때문에!
    \n이런 식으로 끝까지 나를 엿먹이는군.
    \n빌어먹을, 도저히 잠이 오지 않는다.
    \n나가고 싶지만 이미 밤이다. 밤은 위험하다.
    \n하하..그래도 위험한건 인지하고 있네.
    \n잠을.. 자야한다.
    \n잠을..
    \n잠..</string>
    <string name="samButton3">계속</string>

    <!-- Sam3Fragment -->
    <!--Previous Dul2Fragment  -->
    <string name="samText3">곧 바로 아파트를 내려갔다.
    \n좀비들이 보이는군. 다리가 덜덜 떨려온다.
    \n좀비들은.. 정말 영화에 나오는 그대로의 좀비 같이 생겼다.
    \n한 가지 다행스러운건, 영화 28주 후의 좀비처럼
    \n뛰어 다니지는 못 한다는 것이다.
    \n물론 무서운건 매한가지 이지만..
    \n6개월만에 처음 밖에 나가는 거라 두려우면서도 속이 시원하기도 하다.
    \n6개월 전은 아직 좀비 바이러스가 본격적으로 확산 되기 전이었다.
    \n그저 난 뉴스를 보고 식량을 많이 챙겨야 겠다는 생각을 했었고,
    \n그 생각이 나를 살려줬다. 가족들 중에는 나만 살아남아 있으니..
    \n6개월이 지났지만 가족생각을 하니 다시 가슴이 먹먹해진다.
    \n지금만 생각하자. 지금만!!
    \n좀비들이 많지 않다. 조용히 지나가면 마트까지 갈 수 있을..
    \n지나친 행복회로 였나. 좀비들이 마트의 입구를 막고있다.
    \n천천히 탐색해보니, 깨진 창문이 하나 보인다.
    \n약간 높지만, 넘기 엄청 힘들 정도는 아니다.
    \n마트엔 아직 쌀도 있을거고, 통조림이 많이 있을 것이다.
    \n질러볼까??</string>
    <string name="samButton5">질러본다.\n창문을 넘는다!</string>
    <string name="samButton6">편의점으로 간다.</string>

    <!-- Sam4Fragment -->
    <!--Previous Dul2Fragment  -->
    <string name="samText4">곧 바로 아파트를 내려갔다.
    \n좀비들이 보이는군. 다리가 덜덜 떨려온다.
    \n좀비들은.. 정말 영화에 나오는 그대로의 좀비 같이 생겼다.
    \n한 가지 다행스러운건, 영화 28주 후의 좀비처럼
    \n뛰어 다니지는 못 한다는 것이다.
    \n물론 무서운건 매한가지 이지만..
    \n6개월만에 처음 밖에 나가는 거라 두려우면서도 속이 시원하기도 하다.
    \n6개월 전은 아직 좀비 바이러스가 본격적으로 확산 되기 전이었다.
    \n그저 난 뉴스를 보고 식량을 많이 챙겨야 겠다는 생각을 했었고,
    \n그 생각이 나를 살려줬다. 가족들 중에는 나만 살아남아 있으니..
    \n6개월이 지났지만 가족생각을 하니 다시 가슴이 먹먹해진다.
    \n지금만 생각하자. 지금만!!
    \n다행히도 좀비들이 많이 보이지 않는다.
    \n편의점으로 들어가보니 빌어먹을. 먹을게.. 없는 것 같은데?
    \n맘이 절로 급해진다. 얼른 수색해보고 마트로라도 가야한다.
    \n먹을 건..하나 건졌다. 황도 복숭아 한 캔.
    \n이것도 계산대 서랍에서 겨우 찾아낸거다.
    \n알바가 나중에 꽁쳐놨나?
    \n집으로 돌아가자니 당장 식량이 부족하다.
    \n황도 캔으로는 5일 이상은 버티지 못할 것이다.
    \n마트로..가야할까?
    \n마트는 위험하니 집으로 돌아갈까?</string>
    <string name="samButton7">마트로 간다.</string>
    <string name="samButton8">집으로 돌아 간다.</string>
</resources>
