<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_dul"
                android:textSize="18sp"
                android:textColor="#000000"
                android:lineSpacingExtra="3dip"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/dulText" />


            <Button
                android:id="@+id/bt_dul1"
                android:layout_marginTop="20dp"
                android:text="@string/dulButton1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/bt_dul2"
                android:text="@string/dulButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>