<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_sam"
                android:textSize="18sp"
                android:textColor="#000000"
                android:lineSpacingExtra="3dip"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/samText" />


            <Button
                android:id="@+id/bt_sam1"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/samButton1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <View
                android:background="#f7f3f3"
                android:layout_width="match_parent"
                android:layout_height="1px"/>
            <Button
                android:id="@+id/bt_sam2"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/samButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"/>
        </LinearLayout>

    </ScrollView>

</LinearLayout>